--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
+    "pocketbase": "^0.21.5",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-i18next": "^15.1.0",
