--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "i18next-http-backend": "^2.6.2",
     "i18next-resources-to-backend": "^1.2.1",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "pocketbase": "^0.21.5",
@@ -52,6 +53,7 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
